# tarquin

./: .gitignore  LICENSE  README.md  pyproject.toml  references.bib  tarquin.py
.github/workflows/: ci.yml
tests/: test_tarquin.py
