[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tarquin"
dynamic = ["version"]
description = "Optimal information acquisition under sequential sufficiency (the Tarquin algorithm)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ted Fisher" }]
license = { text = "MIT" }
keywords = [
    "optimal-stopping",
    "value-of-information",
    "information-acquisition",
    "snell-envelope",
    "sequential-decision",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    # Upper bound is deliberate: tarquin assigns scikit-learn's private fitted attributes
    # directly (weights_/means_/covariances_/precisions_cholesky_) and indexes covariances_
    # as (K, D, D). That is an internal contract -- notably the precision-Cholesky layout --
    # which can shift across minor releases. Widen the ceiling only after testing the
    # GMM-construction paths (_as_full_covariance, marginalize_gmm) against the newer sklearn.
    "scikit-learn>=1.0,<1.8",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4", "mypy>=1.8"]
examples = ["matplotlib>=3.4"]

[project.urls]
Homepage = "https://github.com/tfisher010/tarquin"
Repository = "https://github.com/tfisher010/tarquin"

[tool.setuptools]
py-modules = ["tarquin"]

[tool.setuptools.dynamic]
version = { attr = "tarquin.__version__" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "slow: tests with large Monte-Carlo draws / fine grids (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Conservative, bug-catching set: pyflakes (F) + pycodestyle errors (E). These flag
# real defects (undefined names, unused imports, syntax) without enforcing style churn.
select = ["E", "F"]

[tool.coverage.run]
source = ["tarquin"]

[tool.coverage.report]
# The __main__ demo block is exercised by the CI "Smoke-test the worked example" step
# (python tarquin.py), not by pytest, so exclude it from the unit-test coverage gate.
exclude_also = ['if __name__ == .__main__.:']

[tool.mypy]
# Light type check on the module: enough to catch real defects (e.g. a name reused as
# both a list and an ndarray) without demanding stubs for numpy/sklearn. Not strict;
# the annotations here are practical, not exhaustive.
files = ["tarquin.py"]
ignore_missing_imports = true
